--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,6 @@
-v0.1.0 - 29.01.2023 - Initial release
+v00.01.* - 29.01.2023 - Initial release
 - Creation of the project
 - Creation of the datatable layout
 - Creation of the datatable component
 - Creation of the dmyoui-atatable-actions component
+v00.02.* - 16.02.2023 - Package configuration
