--- a/changelog.txt
+++ b/changelog.txt
@@ -8,3 +8,4 @@ v00.03.01 - 06.04.2023 - Binding implementation
 v00.04.01 - 12.05.2023 - Checking of the name of some components in the datatables
 v00.05.01 - 28.05.2023 - Sweetalert implementation
 v00.05.02 - 28.05.2023 - Bug fix on options
+v00.06.00 - 12.06.2023 - Option (Select2) Ajax data source implementation
