--- a/changelog.txt
+++ b/changelog.txt
@@ -1,14 +1,16 @@
-v00.01.01 - 29.01.2023 - Initial release
-v00.01.02 - 29.01.2023 - Creation of the project
-v00.01.03 - 29.01.2023 - Creation of the datatable layout
-v00.01.04 - 29.01.2023 - Creation of the datatable component
-v00.01.05 - 29.01.2023 - Creation of the dmyoui-atatable-actions component
-v00.02.01 - 16.02.2023 - Package configuration
-v00.03.01 - 06.04.2023 - Binding implementation
-v00.04.01 - 12.05.2023 - Checking of the name of some components in the datatables
-v00.05.01 - 28.05.2023 - Sweetalert implementation
-v00.05.02 - 28.05.2023 - Bug fix on options
-v00.06.00 - 12.06.2023 - Option (Select2) Ajax data source implementation
-v00.07.00 - 30.06.2023 - Implementation of the Error Log
-v00.07.02 - 30.06.2023 - Bug fixing of the creation of the sq3 file
-v00.07.03 - 30.06.2023 - Bug fixing of the creation of the errlogs table
+Ver.        Date         Who             Changed
+v00.01.01 - 29.01.2023 - nicola-myo      Initial release
+v00.01.02 - 29.01.2023 - nicola-myo      Creation of the project
+v00.01.03 - 29.01.2023 - nicola-myo      Creation of the datatable layout
+v00.01.04 - 29.01.2023 - nicola-myo      Creation of the datatable component
+v00.01.05 - 29.01.2023 - nicola-myo      Creation of the dmyoui-atatable-actions component
+v00.02.01 - 16.02.2023 - nicola-myo      Package configuration
+v00.03.01 - 06.04.2023 - nicola-myo      Binding implementation
+v00.04.01 - 12.05.2023 - nicola-myo      Checking of the name of some components in the datatables
+v00.05.01 - 28.05.2023 - nicola-myo      Sweetalert implementation
+v00.05.02 - 28.05.2023 - nicola-myo      Bug fix on options
+v00.06.00 - 12.06.2023 - nicola-myo      Option (Select2) Ajax data source implementation
+v00.07.00 - 30.06.2023 - nicola-myo      Implementation of the Error Log
+v00.07.02 - 30.06.2023 - nicola-myo      Bug fixing of the creation of the sq3 file
+v00.07.03 - 30.06.2023 - nicola-myo      Bug fixing of the creation of the errlogs table
+v00.07.04 - 18.07.2023 - nicola-myo      Add the class Utils and the method Utils::checkEmptyValues
