--- a/changelog.txt
+++ b/changelog.txt
@@ -14,3 +14,4 @@ v00.07.00 - 30.06.2023 - nicola-myo      Implementation of the Error Log
 v00.07.02 - 30.06.2023 - nicola-myo      Bug fixing of the creation of the sq3 file
 v00.07.03 - 30.06.2023 - nicola-myo      Bug fixing of the creation of the errlogs table
 v00.07.04 - 18.07.2023 - nicola-myo      Add the class Utils and the method Utils::checkEmptyValues
+v00.08.01 - 12.08.2023 - nicola-myo      Add the management and visualization of the laravel.log file
