--- a/changelog.txt
+++ b/changelog.txt
@@ -18,3 +18,4 @@ v00.08.01 - 12.08.2023 - nicola-myo      Add the management and visualization of
 v00.09.01 - 13.08.2023 - nicola-myo      Add datatable property onInsertActionForm
 v00.09.02 - 17.08.2023 - nicola-myo      Using of the query instead the model for managing records in datatables
 v00.10.01 - 30.08.2023 - nicola-myo      Bug fixing on alternative.js
+v00.10.02 - 31.08.2023 - nicola-myo      Info button added to the actions of the datatable record 
