--- a/changelog.txt
+++ b/changelog.txt
@@ -19,4 +19,5 @@ v00.09.01 - 13.08.2023 - nicola-myo      Add datatable property onInsertActionFo
 v00.09.02 - 17.08.2023 - nicola-myo      Using of the query instead the model for managing records in datatables
 v00.10.01 - 30.08.2023 - nicola-myo      Bug fixing on alternative.js
 v00.10.02 - 31.08.2023 - nicola-myo      Info button added to the actions of the datatable record 
-v00.10.03 - 31.08.2023 - nicola-myo      Size property implemented for the alternative-modal-form controll 
+v00.10.03 - 31.08.2023 - nicola-myo      Size property implemented for the alternative-modal-form controll
+v00.10.04 - 05.09.2023 - nicola-myo      Add the onClickInfoActionCustom property to the DataTable in alternative.js
